@@ -48,7 +48,7 @@ zope.app.pagetemplate = 3.4.1
 zope.app.preference = 3.4.1
 zope.app.principalannotation = 3.4
 zope.app.publication = 3.4.3
-zope.app.publisher = 3.4.1
+zope.app.publisher = 3.5.1
 zope.app.renderer = 3.4
 zope.app.rotterdam = 3.4.1
 zope.app.schema = 3.4
